Switch to Spring Boot project type